# korea-trade-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  korea-trade-sector-dashboard.html  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  update-data.bat
app/: __init__.py  aggregate.py  cache.py  config.py  customs.py  exporter.py  fx.py  main.py  mappings.py
data/: fx.json  item-countries.json  item-trend.json  meta.json  monthly.json  region-trend.json  sector-trend.json  trend.json
scripts/: export_static.py
tests/: conftest.py  test_aggregate.py  test_api.py  test_customs.py  test_export.py  test_exporter.py  test_fx.py
